--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
     <!-- -------------start landing ------------ -->
     <div class="landing d-flex justify-content-center d-flex align-items-center">
         <div class="text-center text-light">
-            <h1>Taste the Creativity</h1>
+            <h1 class="pt-5 pt-sm-0 pt-md-0 pt-lg-0 ">Taste the Creativity</h1>
             <p class="fs-6 text-secondary mb-5">We make awesome graphic and web design</p>
-            <a class="btn  rounded-pill main-btn " href="#">Get started</a>
+            <a class="btn  rounded-pill main-btn mb-4 mb-sm-0 mb-md-0 mb-lg-0 " href="#">Get started</a>
         </div>
     </div>
     <!-- ------------- end landing ------------ -->
